--- a/microservice1.properties
+++ b/microservice1.properties
@@ -1,4 +1,4 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/micro1
+spring.datasource.url=jdbc:mysql://localhost:micro1
 spring.mvc.format.date=yyyy-MM-dd
 
 
