--- a/microservice2.properties
+++ b/microservice2.properties
@@ -1,2 +1,2 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/micro2
+spring.datasource.url=jdbc:mysql://localhost/micro2
 spring.mvc.format.date=yyyy-MM-dd
